Update FIATranslationGuides, AquiferOpen material

--- a/catalog.html
+++ b/catalog.html
@@ -48,7 +48,6 @@
                         <option value="BiblicaStudyNotes">Biblica Study Notes</option>
                         <option value="BiblicaStudyNotesBookIntros">Biblica Study Notes (Book Intros)</option>
                         <option value="ChineseUnionVersionTraditional">Chinese Union Version (Traditional)</option>
-                        <option value="FIATranslationGuide">Familiarization, Internalization, Articulation (FIA)</option>
                         <option value="FIAImages">Familiarization, Internalization, Articulation (FIA) Images</option>
                         <option value="FIAKeyTerms">Familiarization, Internalization, Articulation (FIA) Key Terms</option>
                         <option value="FIAMaps">Familiarization, Internalization, Articulation (FIA) Maps</option>
@@ -69,6 +68,7 @@
                         <option value="ReinaValera1909">Reina Valera 1909</option>
                         <option value="RussianSynodalBible">Russian Synodal Bible</option>
                         <option value="TerjemahanBaruIndonesia">Terjemahan Baru Indonesia</option>
+                        <option value="FIATranslationGuide">Translation Guide (FIA)</option>
                         <option value="unfoldingWordLiteral">unfoldingWord Literal</option>
                         <option value="unfoldingWordSimplified">unfoldingWord Simplified</option>
                         <option value="UWTranslationManual">unfoldingWord® Translation Academy</option>
@@ -4203,7 +4203,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4217,7 +4217,7 @@ const RESOURCES_DATA = {
       "eng": {
         "code": "eng",
         "name": "English",
-        "title": "Familiarization, Internalization, Articulation (FIA)",
+        "title": "Translation Guide (FIA)",
         "version": "1.0.1",
         "resource_type": "Translation Guide",
         "content_type": "Html",
@@ -4228,7 +4228,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4253,7 +4253,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4278,7 +4278,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4303,7 +4303,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4328,7 +4328,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4353,7 +4353,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4378,7 +4378,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4403,7 +4403,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4428,7 +4428,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4453,7 +4453,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "SRV Partners",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": "<p><b>Familiarization, Internalization, Articulation (FIA) Translation Guide</b> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license. <cite>Familiarization, Internalization, Articulation (FIA) Translation Guide</cite> has been adapted in the following languages Tok Pisin, \u0639\u0631\u0628\u064a, Fran\u00e7ais, \u0939\u093f\u0902\u0926\u0940, Bahasa Indonesia, Portugu\u00eas, \u0420\u0443\u0441\u0441\u043a\u0438\u0439, Espa\u00f1ol, Kiswahili, \u7b80\u4f53\u4e2d\u6587 from <cite>Familiarization, Internalization, Articulation (FIA)</cite> \u00a9 2023 SRV Partners Released under CC BY-SA 4.0 license by Mission Mutual</p>"
+          "adaptation_notice": ""
         },
         "has_json": true,
         "has_md": true,
@@ -4465,7 +4465,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
-    "title": "Familiarization, Internalization, Articulation (FIA)"
+    "title": "Translation Guide (FIA)"
   },
   "VideoBibleDictionary": {
     "name": "VideoBibleDictionary",
