--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
         <div class="container">
             <p>&copy; 2025 Mission Mutual. Open Biblical Resources.</p>
             <p><a href="https://github.com/BibleAquifer" target="_blank">GitHub Org</a> | <a href="https://github.com/BibleAquifer/docs" target="_blank">Documentation</a></p>
+            <p class="site-version">Site version: 2026-02-10@19:32:04</p>
         </div>
     </footer>
 </body>
