--- a/catalog.html
+++ b/catalog.html
@@ -130,7 +130,7 @@
         <div class="container">
             <p>&copy; 2026 Mission Mutual. Open Biblical Resources.</p>
             <p><a href="https://github.com/BibleAquifer" target="_blank">GitHub Org</a> | <a href="https://github.com/BibleAquifer/docs" target="_blank">Documentation</a></p>
-            <p class="site-version">Site version: 2026-02-12@02:05:52</p>
+            <p class="site-version">Site version: 2026-02-12@14:06:49</p>
         </div>
     </footer>
 
@@ -2012,7 +2012,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Book Intros)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from <cite>Biblica Study Notes</cite> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -2037,7 +2037,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Book Intros)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from <cite>Biblica Study Notes</cite> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -2062,7 +2062,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Book Intros)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from <cite>Biblica Study Notes</cite> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -2087,7 +2087,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Book Intros)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from <cite>Biblica Study Notes</cite> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -2112,7 +2112,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Book Intros)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from <cite>Biblica Study Notes</cite> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -2137,7 +2137,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Book Intros)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from <cite>Biblica Study Notes</cite> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -2162,7 +2162,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Book Intros)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from <cite>Biblica Study Notes</cite> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -2187,7 +2187,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Book Intros)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from <cite>Biblica Study Notes</cite> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual</p>"
         },
         "has_json": true,
         "has_md": true,
@@ -2220,7 +2220,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
@@ -2245,7 +2245,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
@@ -2270,7 +2270,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
@@ -2295,7 +2295,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
@@ -2320,7 +2320,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
@@ -2345,7 +2345,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
@@ -2370,7 +2370,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
@@ -2395,7 +2395,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
@@ -2420,7 +2420,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
@@ -2445,7 +2445,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
@@ -2470,7 +2470,7 @@ const RESOURCES_DATA = {
           "copyright_dates": "2023",
           "copyright_holder": "Biblica, Inc.",
           "license_name": "CC BY-SA 4.0 license",
-          "adaptation_notice": ""
+          "adaptation_notice": "<p><b>Biblica Study Notes (Key Terms)</b> \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license. <cite>Biblica Study Notes</cite> has been adapted in the following languages: Tok Pisin, Arabic (\u0639\u0631\u0628\u064a), French (Fran\u00e7ais), Hindi (\u0939\u093f\u0902\u0926\u0940), Indonesian (Bahasa Indonesia), Portuguese (Portugu\u00eas), Russian (\u0420\u0443\u0441\u0441\u043a\u0438\u0439), Spanish (Espa\u00f1ol), Swahili (Kiswahili), and Simplified Chinese (\u7b80\u4f53\u4e2d\u6587)from Biblica Study Notes \u00a9 2023 Biblica Inc. Released under CC BY-SA 4.0 license by Mission Mutual."
         },
         "has_json": true,
         "has_md": true,
