deploy: c5131de92b31fcb214db66c8fe1ee731fa5c15cd

--- a/catalog.html
+++ b/catalog.html
@@ -130,7 +130,7 @@
         <div class="container">
             <p>&copy; 2026 Mission Mutual. Open Biblical Resources.</p>
             <p><a href="https://github.com/BibleAquifer" target="_blank">GitHub Org</a> | <a href="https://github.com/BibleAquifer/docs" target="_blank">Documentation</a></p>
-            <p class="site-version">Site version: 2026-02-12@14:06:49</p>
+            <p class="site-version">Site version: 2026-02-12@14:36:09</p>
         </div>
     </footer>
 
@@ -443,6 +443,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-09-0001",
     "title": "Aquifer Open Bible Dictionary"
   },
   "AquiferOpenStudyNotes": {
@@ -701,6 +702,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-09-0001",
     "title": "Aquifer Open Study Notes"
   },
   "AquiferOpenStudyNotesBookIntros": {
@@ -959,6 +961,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-01-05",
     "title": "Aquifer Open Study Notes (Book Intros)"
   },
   "AquiferOpenStudyNotesBookIntroSummaries": {
@@ -1242,6 +1245,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2025-12-10",
     "title": "Aquifer Open Study Notes (Book Intro Summaries)"
   },
   "AquiferOpenStudyNotesProfiles": {
@@ -1450,6 +1454,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-01-05",
     "title": "Aquifer Open Study Notes (Profiles)"
   },
   "AquiferOpenStudyNotesThemes": {
@@ -1683,6 +1688,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-01-05",
     "title": "Aquifer Open Study Notes (Themes)"
   },
   "BiblicaStudyNotes": {
@@ -1991,6 +1997,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Biblica Study Notes"
   },
   "BiblicaStudyNotesBookIntros": {
@@ -2199,6 +2206,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-12",
     "title": "Biblica Study Notes (Book Intros)"
   },
   "BiblicaStudyNotesKeyTerms": {
@@ -2482,6 +2490,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-12",
     "title": "Biblica Key Terms"
   },
   "SILOpenTranslatorsNotes": {
@@ -2515,6 +2524,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2025-11-07",
     "title": "Open Translator's Notes (SIL)"
   },
   "UWOpenBibleStories": {
@@ -2823,6 +2833,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2025-10-28",
     "title": "Open Bible Stories (unfoldingWord)"
   },
   "UWTranslationManual": {
@@ -3006,6 +3017,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2025-12-08",
     "title": "unfoldingWord\u00ae Translation Academy"
   },
   "UWTranslationNotes": {
@@ -3214,6 +3226,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "unfoldingWord\u00ae Translation Notes"
   },
   "UWTranslationQuestions": {
@@ -3422,6 +3435,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-01-08",
     "title": "unfoldingWord\u00ae Translation Questions"
   },
   "UWTranslationWords": {
@@ -3630,6 +3644,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-01-08",
     "title": "unfoldingWord\u00ae Translation Words"
   },
   "UBSImages": {
@@ -4088,6 +4103,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2025-10-28",
     "title": "Images (UBS)"
   },
   "FIAImages": {
@@ -4121,6 +4137,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2025-12-05",
     "title": "Familiarization, Internalization, Articulation (FIA) Images"
   },
   "FIAMaps": {
@@ -4154,6 +4171,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2025-12-05",
     "title": "Familiarization, Internalization, Articulation (FIA) Maps"
   },
   "FIAKeyTerms": {
@@ -4187,6 +4205,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2025-12-05",
     "title": "Familiarization, Internalization, Articulation (FIA) Key Terms"
   },
   "FIATranslationGuide": {
@@ -4470,6 +4489,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Familiarization, Internalization, Articulation (FIA)"
   },
   "VideoBibleDictionary": {
@@ -4928,6 +4948,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2025-10-28",
     "title": "Videos (Video Bible Dictionary)"
   },
   "BereanStandardBible": {
@@ -4961,6 +4982,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Berean Standard Bible"
   },
   "unfoldingWordLiteral": {
@@ -4994,6 +5016,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "unfoldingWord Literal"
   },
   "OpenKiswahiliContemporaryVersion": {
@@ -5027,6 +5050,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Open Kiswahili Contemporary Version"
   },
   "IndianRevisedVersion": {
@@ -5060,6 +5084,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Indian Revised Version"
   },
   "ArabicVanDyckBible": {
@@ -5093,6 +5118,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Arabic Van Dyck Bible"
   },
   "BiblicaOpenNepaliContemporaryVersion": {
@@ -5126,6 +5152,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Biblica Open Nepali Contemporary Version"
   },
   "BiblicaOpenNewArabicVersion2012": {
@@ -5159,6 +5186,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Biblica Open New Arabic Version 2012"
   },
   "ChineseUnionVersionTraditional": {
@@ -5192,6 +5220,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Chinese Union Version (Traditional)"
   },
   "GatewayLiteralTextHindi": {
@@ -5225,6 +5254,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Gateway Literal Text (Hindi)"
   },
   "GatewayLiteralTextIndonesian": {
@@ -5258,6 +5288,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Gateway Literal Text (Indonesian)"
   },
   "GatewaySimplifiedTextHindi": {
@@ -5291,6 +5322,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Gateway Simplified Text (Hindi)"
   },
   "GatewaySimplifiedTextIndonesian": {
@@ -5324,6 +5356,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Gateway Simplified Text (Indonesian)"
   },
   "NepaliUnlockedLiteralBible": {
@@ -5357,6 +5390,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Nepali Unlocked Literal Bible"
   },
   "OpenHindiContemporaryVersion": {
@@ -5390,6 +5424,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Open Hindi Contemporary Version"
   },
   "PSLE": {
@@ -5423,6 +5458,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "PSLE"
   },
   "ReinaValera1909": {
@@ -5456,6 +5492,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Reina Valera 1909"
   },
   "RussianSynodalBible": {
@@ -5489,6 +5526,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Russian Synodal Bible"
   },
   "TerjemahanBaruIndonesia": {
@@ -5522,6 +5560,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Terjemahan Baru Indonesia"
   },
   "unfoldingWordSimplified": {
@@ -5555,6 +5594,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "unfoldingWord Simplified"
   },
   "WorldEnglishBible": {
@@ -5588,6 +5628,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "World English Bible"
   },
   "WorldEnglishBibleUpdated": {
@@ -5621,6 +5662,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "World English Bible Updated"
   },
   "LouisSegond1910": {
@@ -5654,6 +5696,7 @@ const RESOURCES_DATA = {
         "has_alignments": true
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Louis Segond 1910"
   },
   "OpenBislamaBibleRevised": {
@@ -5687,6 +5730,7 @@ const RESOURCES_DATA = {
         "has_alignments": false
       }
     },
+    "release_tag": "v2026-02-11",
     "title": "Open Bislama Bible Revised"
   }
 };
@@ -6212,6 +6256,7 @@ function displayLanguageMetadata() {
     const metadataFields = [
         { label: 'Title', value: langData.title },
         { label: 'Language', value: langData.language },
+        { label: 'Resource Version', value: selectedResource.release_tag ? `<a href="https://github.com/${ORG_NAME}/${selectedResource.name}/releases/tag/${selectedResource.release_tag}" target="_blank">${selectedResource.release_tag}</a>` : null },
         { label: 'Schema Version', value: langData.version },
         { label: 'Type', value: langData.resource_type },
         { label: 'Content Type', value: langData.content_type }
